# design-cpp_test

./: CMakeLists.txt  abstract_factory.cpp  abstract_factory.h  abstract_factory_main.cpp  builder_pattern.cpp  builder_pattern.h  builder_pattern_main.cpp  design-cpp.kdev4  facade.cpp  facade.h  facade_main.cpp  factory_method.cpp  factory_method.h  factory_method_main.cpp  observer.cpp  observer.h  observer_main.cpp  prototype.cpp  prototype.h  prototype_main.cpp  proxy.cpp  proxy.h  proxy_main.cpp  simpe_factory.cpp  simpe_factory.h  simpe_factory_main.cpp  singleton.h  singleton_main.cpp
.kdev4/: design-cpp.kdev4
